--- a/TODO
+++ b/TODO
@@ -1,15 +1,14 @@
 Features:
-- some kind of namespace or object and import mechanism
+- some kind of namespace or object and import mechanism other than eval
 - math and rand primitives
-- split i$s and replace @[s;old(s);new(s)[;n]] or @[s;I;s]
 - regexp primitives
 - proper io (open/read/write/close/defer?)
 - date and time
-- array shift primitives (maybe bitwise operations too)
 - use general x#y array case for something
+- split i$s and maybe amend string @[s;I;s]
+- maybe bitwise operations
 - maybe triadic amend with .
-- rename eval from . to "eval" and reuse . for something?
-- some kind of templating/interpolation
+- maybe some kind of templating/interpolation
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
