--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 Features:
-- some kind of namespace or object and import mechanism other than eval
 - rand primitives
+- some kind of namespace or object and import mechanism other than eval
 - regexp primitives
-- proper io (open/read/write/close/defer?)
 - date and time
+- general io (open/read/write/close/defer?)
 - use general x#y array case for something
 - split i$s and maybe amend string @[s;I;s]
 - maybe bitwise operations
@@ -14,6 +14,10 @@ Features:
 Tests:
 - improve test coverage for error messages and refactor and improve them along
   the way
+
+Documentation:
+- write reference docs and maybe some introductory guide (in addition to the
+  current help summary)
 
 Optimizations:
 - more special code for common op/ and op\
