--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Features:
 - some kind of namespace or object and import mechanism other than eval
 - regexp primitives
-- date and time
+- date and time (wip)
 - general io (open/read/write/close/defer?)
 - use general x#y array case for something
 - split i$s and maybe amend string @[s;I;s]
