--- a/TODO
+++ b/TODO
@@ -1,13 +1,15 @@
 Features:
 - some kind of namespace or object and import mechanism other than eval
 - regexp primitives
-- general io (open/read/write/close/defer?)
+- more general io (open/read/write/close/defer?)
 - use general x#y array case for something
-- split i$s and maybe amend string @[s;I;s]
+- split i$s, and cut x_s and maybe amend string @[s;I;s]
 - maybe bitwise operations
 - maybe triadic amend with .
 - maybe some kind of templating/interpolation
 - maybe a switch/match
+- maybe add converge f/ and f\
+- maybe add splice
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
