implement converge f/ and f\

--- a/TODO
+++ b/TODO
@@ -8,8 +8,8 @@ Features:
 - maybe bitwise operations
 - maybe triadic amend with .
 - maybe a switch/match
-- maybe add converge f/ and f\
 - maybe add splice
+- improve error locations for adverbs and some other special cases
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
