add item to TODO

--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ Features:
 - maybe add splice
 - improve error locations for adverbs and some other special cases
 - implement cycle detection in converge
+- maybe implement extensions to '/\ for more than 2 arguments
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
