--- a/TODO
+++ b/TODO
@@ -25,3 +25,4 @@ Optimizations:
 - improve some special and general cases in self-search functions
 - maybe improve liveness analysis (though simple, already good enough)
 - many functions have deep Canonical calls in generic case when a shallow version would suffice
+- refcounting of generic arrays is currently inefficient
