--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ Features:
 - maybe a switch/match
 - maybe add splice
 - improve error locations for adverbs and some other special cases
-- implement cycle detection in converge
+- maybe implement cycle detection in converge
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
@@ -21,7 +21,7 @@ Documentation:
 
 Optimizations:
 - more special code for common op/ and op\
-- improve some special and general cases in self-search functions
+- some remaining special cases in self-search functions
 - maybe improve liveness analysis (though simple, already good enough)
 - many functions have deep Canonical calls in generic case when a shallow version would suffice
 - refcounting of generic arrays is currently inefficient
