--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 Features:
-- maybe more capable io (like bidirectional pipes)
 - maybe some kind of templating/interpolation
+- maybe add bidirectional pipes in open
 - maybe some kind of printf (though i$s and "prec" goal n do the job)
 - maybe add splice
 - maybe split i!s and maybe amend string @[s;I;s]
