--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
 Features:
-- maybe add bidirectional pipes in open (though basic cases can be handled
-  already with run)
-- maybe add a json reader (possible now that we have dicts)
+- maybe add a builtin for more convenient error handling
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
@@ -10,7 +8,7 @@ Tests:
   refcount overhaul, because refcounting is hard.
 
 Documentation:
-- write some introductory guide (in addition to the current help)
+- maybe write some introductory guide (in addition to the current help)
 
 Optimizations:
 - maybe special code for remaining common op/ and op\ and op'
