--- a/TODO
+++ b/TODO
@@ -2,15 +2,15 @@ Features:
 
 Tests:
 - improve test coverage for error messages and refactor and improve them along
-  the way (in particular, ensure more consistency)
+  the way (in particular, ensure more consistency) (in progress)
 - add more immutability tests to catch any possible regressions after the
-  refcount overhaul, because refcounting is hard.
+  refcount overhaul, because refcounting is hard (in progress).
 
 Documentation:
 - maybe write some introductory guide (in addition to the current help)
 
 Optimizations:
-- maybe special code for remaining common op/ and op\ and op'
+- maybe special code for more uncommon op/ and op\ and op'
 - maybe improve liveness analysis for code with branches, and for global
   variables
 - maybe some remaining special cases in self-search functions
