--- a/TODO
+++ b/TODO
@@ -15,7 +15,8 @@ Optimizations:
 - maybe special code for more uncommon op/ and op\ and op'
 - maybe improve liveness analysis for code with branches, and for global
   variables
-- maybe some remaining special cases in self-search functions
+- maybe some remaining special cases in self-search functions (all common uses
+  already done)
 - maybe change bool type into uint8 or byte and use it to save size in the
-  result of some primitives, and use specialized algorithms for a few of them
-  too.
+  result of some primitives, and simplify specialized algorithms for
+  small-ranges for such types. This would be quite a lot of work.
