--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Features:
 - maybe s$ could be extended into some kind of sprintf/scanf
+- maybe add “case” x I'y
 - maybe use non-adverbial \ for some kind of statement (no ideas yet)
 
 Tests:
