--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ Tests:
   the way (in particular, ensure more consistency) (in progress)
 - add more immutability tests to catch any possible regressions after the
   refcount overhaul, because refcounting is hard (in progress).
+- see if there are remaining regressions from []bool -> []byte overhaul.
 
 Documentation:
 - maybe write some introductory guide (in addition to the current help and FAQ)
@@ -17,6 +18,3 @@ Optimizations:
 - maybe improve liveness analysis for code with branches
 - maybe some remaining special cases in self-search functions (all common uses
   already done)
-- maybe change bool type into uint8 or byte and use it to save size in the
-  result of some primitives, and simplify specialized algorithms for
-  small-ranges for such types. This would be quite a lot of work.
