update TODO and CHANGES

--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@ Tests:
 
 Documentation:
 - maybe write some introductory guide (in addition to the current help and FAQ)
+- write a summary of differences with ngn/k and maybe other K versions.
 
 Optimizations:
 - maybe special code for more uncommon op/ and op\ and op', as well as amend
